--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": ">=0.21.1",
     "vue": "^2.3.3",
     "vue-axios": "^2.0.2",
     "vue-localstorage": "^0.3.0",
